[WEB] Fix: overflow-x

--- a/web/health-monitor/src/layout/styles.css
+++ b/web/health-monitor/src/layout/styles.css
@@ -1,5 +1,5 @@
 .appContainer {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100px;
+  width: 5%;
   padding: 10px;
   background-color: #303030;
 }
