--- a/web/health-monitor/src/pages/dashboard/components/measures/styles.css
+++ b/web/health-monitor/src/pages/dashboard/components/measures/styles.css
@@ -3,8 +3,7 @@
 .bodyMeasurements {
   border-radius: 10px;
   color: #ffffff;
-  width: 100%;
-  padding-left: 50px;
+  width: 85%;
 }
 
 .bodyMeasurements h3 {
@@ -22,6 +21,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  width: 100%;
 }
 
 .bodyMeasurements li {
@@ -35,7 +35,7 @@
   gap: 8px;
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 80%;
 }
 
 .bodyMeasurements p {
