--- a/web/health-monitor/src/pages/dashboard/dashboard.css
+++ b/web/health-monitor/src/pages/dashboard/dashboard.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  width: 95%;
   height: 100%;
   background-color: #8d8d8d;
   display: flex;
@@ -8,7 +8,7 @@
 }
 
 .content {
-  width: 100%;
+  width: 60%;
   height: auto;
   padding: 20px;
 }
@@ -35,7 +35,7 @@
   padding-top: 32px;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 40%;
   height: auto;
   background-color: #303030;
   border-radius: 40px 0 0 40px;
